--- a/views/index.html
+++ b/views/index.html
@@ -44,6 +44,7 @@
   </head>
   <body>
     <div id="app">
+      <p>ROOM: {{ roomName }}</p>
       <ul id="messages">
         <li v-for="message in messages">{{ message }}</li>
       </ul>
@@ -55,27 +56,39 @@
         </button>
       </form>
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+    <script src="/socket.io/socket.io.js"></script>
   </body>
-  <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
-  <script src="/socket.io/socket.io.js"></script>
   <script>
     var socket = io();
     var app = new Vue({
       el: "#app",
-      data: {
-        textInput: "",
-        messages: [],
+      data() {
+        return {
+          roomName: "",
+          textInput: "",
+          messages: [],
+        };
       },
       methods: {
-        sendMessage: function (e) {
+        sendMessage(e) {
           e.preventDefault();
-          socket.emit("chat message", this.textInput);
+          let message = {
+            content: this.textInput,
+            room: this.roomName,
+          };
+          console.log(message);
+          socket.emit("chat message", JSON.stringify(message));
           this.textInput = "";
         },
       },
       mounted() {
+        socket.emit("join room");
         socket.on("chat message", (msg) => {
           this.messages.push(msg);
+        });
+        socket.on("room notification", (name) => {
+          this.roomName = name;
         });
       },
     });
